# MiniPatientMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  tools_install.sh
common/: CMakeLists.txt
common/osal/: osal.h  port_common.cpp  port_linux.cpp  port_windows.cpp
common/proto/: encoder.cpp  encoder.h  monitor.proto
data/: WaveData.csv
device/: CMakeLists.txt
device/src/: config_sim_test.cpp  device_config.cpp  device_config.h  ecg_sim.cpp  ecg_sim.h  main.cpp  net_server.cpp  net_server.h  nibp_sim.cpp  nibp_sim.h  resp_sim.cpp  resp_sim.h  sim_common.h  spo2_sim.cpp  spo2_sim.h  temp_sim.cpp  temp_sim.h  wave_demo_data.h
device/ui/: config_bridge.cpp  config_bridge.h  config_ui.c  config_ui.h  lv_conf.h
docs/: Architecture.md  DevSetup.md  RiskAnalysis.md  SRS.md  TestPlan.md  TestReport.md  TraceabilityMatrix.md
host/: CMakeLists.txt
host/src/: main.cpp  net_client.cpp  net_client.h  net_thread.cpp  net_thread.h  nibp_controller.cpp  nibp_controller.h  nibp_test.cpp  packet_counter.cpp  ring_buffer.h
host/src/ui/: main_window.cpp  main_window.h  param_panel.cpp  param_panel.h  top_bar.cpp  top_bar.h  waveform_widget.cpp  waveform_widget.h
tools/: gen_wave_demo_data.py
